--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                     <img src="http://pkfng866o.bkt.clouddn.com/page3_1.png" alt="">
                     <img src="http://pkfng866o.bkt.clouddn.com/page3_3.png" alt="">
                     <div class="concat">
-                        <img src="http://pkfng866o.bkt.clouddn.com/zhou.png" alt="">
+                        <img src="" alt="">
                         <div class="text">
-                            <p>扫码领取</p>
-                            <p>课程视频</p>
+                            <p>制作者：</p>
+                            <p>凡康佳 </p>
                         </div>
                     </div>
                 </div>
